[package]
name        = "offline-signer"
description = "FerroGate — air-gapped root-key ceremony tool (F14)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "offline-signer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ferro-ceremony = { path = "../../crates/ferro-ceremony" }
ferro-crypto   = { path = "../../crates/ferro-crypto" }
ferro-svid     = { path = "../../crates/ferro-svid" }

anyhow     = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
hex        = { workspace = true }
rand_core  = { workspace = true }
sha3       = { workspace = true }
